syntax = "proto3";

option java_package = "fr.harmoniamk.statsmkworld.debug";
option java_multiple_files = true;


message WarProto {
    int64 id = 1;
    string team_host = 2;
    string team_opponent = 3;
    repeated WarTrackProto tracks = 4;
    repeated WarPenaltyProto penalties = 5;
}

message WarTrackProto {
    int64 id = 1;
    int32 index = 2;
    repeated WarPositionProto positions = 3;
    repeated ShockProto shocks = 4;
}

message WarPenaltyProto {
    string teamId = 1;
    int32 amount = 2;
}

message WarPositionProto {
    int64 id = 1;
    string player_id = 2;
    int32 position = 3;
}

message ShockProto {
    string player_id = 1;
    int32 count = 2;
}
